* Use Spring context in storage initializer. * Fix various problems found in testing.